--- a/year8-today.html
+++ b/year8-today.html
@@ -144,9 +144,9 @@
                 { date: '2024-12-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRcD7UgRlbaQbGtCuf8BR7MAQV1KLHD-pOceeIUjS3WhqY' },
                 { date: '2024-12-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRClMsNg2CUT597IDfaYEhmAW9LYxk_YFij-4Cn1ecVNpY' },
                 { date: '2024-12-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSoKhZvCZxOT4obDYyo2ATsAVYxo-gIN6KiG4YFhCphWwI' },
-                { date: '2024-12-06', time: '06:59', url: 'n/a' },
-                { date: '2024-12-07', time: '06:59', url: 'n/a' },
-                { date: '2024-12-08', time: '06:59', url: 'n/a' },
+                { date: '2024-12-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ2nEYI--I5TI9yJDDxHZQXAdMNUtf5Dm0L_N3XcTDE9CI' },
+                { date: '2024-12-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSOEUAN1KdaS4qUQcTv2dC5AXaRFGwlto_OSWJ_tRWcf5U' },
+                { date: '2024-12-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSfeq2sMGHpRIw5hxCJisDqAe7-Kuf0gFiFyJJgyUYfT1g' },
                 { date: '2024-12-09', time: '06:59', url: 'n/a' },
                 { date: '2024-12-10', time: '06:59', url: 'n/a' },
                 { date: '2024-12-11', time: '06:59', url: 'n/a' },
