--- a/year8-answer.html
+++ b/year8-answer.html
@@ -144,9 +144,9 @@
                 { date: '2024-12-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRyexmOcuuaRIQQvlJqQGeaAbi9WBW3LdwdeOrJAKbIzyw' },
                 { date: '2024-12-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSlJUKscPp-Q6DkuZqO-9qOAaHIZC9gUBLxhRGtPoOH6oU' },
                 { date: '2024-12-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSUH6dkflpuQJTByEsK6GAiAcsFW5zGRqkOUlWSDR00YYI' },
-                { date: '2024-12-06', time: '06:59', url: 'n/a' },
-                { date: '2024-12-07', time: '06:59', url: 'n/a' },
-                { date: '2024-12-08', time: '06:59', url: 'n/a' },
+                { date: '2024-12-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS9m1RWmi6xRK7sd6jYlM9NAWE1Yf-oAHnmwR2CBCimXn4' },
+                { date: '2024-12-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ_V38Qo6DjSbwOGh8ZjvQQAXMBWVnzXjCAcFxrSHlfliY' },
+                { date: '2024-12-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQjMQilyF0BT4ZmoTA6A6QgAbcOKV4Oh77i0vyw8vwUWqQ' },
                 { date: '2024-12-09', time: '06:59', url: 'n/a' },
                 { date: '2024-12-10', time: '06:59', url: 'n/a' },
                 { date: '2024-12-11', time: '06:59', url: 'n/a' },
