--- a/year8-answer.html
+++ b/year8-answer.html
@@ -147,9 +147,9 @@
                 { date: '2024-12-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS9m1RWmi6xRK7sd6jYlM9NAWE1Yf-oAHnmwR2CBCimXn4' },
                 { date: '2024-12-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ_V38Qo6DjSbwOGh8ZjvQQAXMBWVnzXjCAcFxrSHlfliY' },
                 { date: '2024-12-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQjMQilyF0BT4ZmoTA6A6QgAbcOKV4Oh77i0vyw8vwUWqQ' },
-                { date: '2024-12-09', time: '06:59', url: 'n/a' },
-                { date: '2024-12-10', time: '06:59', url: 'n/a' },
-                { date: '2024-12-11', time: '06:59', url: 'n/a' },
+                { date: '2024-12-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRZ5ScpLYXpT4jnufrvvkmZAWRAVDlfVyfl8u7bLdI9mVk' },
+                { date: '2024-12-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSk3UOKom2TSKW_EN142wvNAa0LmK-fx-w1vyY0ZlxHCAY' },
+                { date: '2024-12-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQmvmw5h63jQLsZL7ICor4sAVtiSMYY1oCj0r6A5TL5C7E' },
                 { date: '2024-12-12', time: '06:59', url: 'n/a' },
                 { date: '2024-12-13', time: '06:59', url: 'n/a' }                        
               ];
