--- a/year7-answer.html
+++ b/year7-answer.html
@@ -139,22 +139,19 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-12-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQy07Z75FosT4JEEgTKVGlPAYcFQsav6NYbEckVxrrYD_M' },
-                { date: '2024-12-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRydMQjolQOS6Wjd6urp2uTAXlccXHR_1ZR-qRdvW9HN5s' },
-                { date: '2024-12-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR2B7GEAbOGS4lkHsOHIX8yAfNJs-IEZXDCRWIQZP4cl5Q' },
-                { date: '2024-12-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTAT0HMMC6NQZqnJKRBGNSyAS8ytqNWcJDZN9zlgwme4qA' },
-                { date: '2024-12-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTdTdX7mdaqS57VnKxpWc86AVbfabIA0h3i55EQmVbHUug' },
-                { date: '2024-12-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTAkc9Tg9MYRJejzl5JuOn3AfodYevaeEichXl_tnFXc0o' },
-                { date: '2024-12-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRwsw24Z9M-RYIrNCDhpzC1ATxHAOGFtthvVpYZmLMRNTc' },
-                { date: '2024-12-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ9bfrhT2qRR4YFJtgkySo0AVbji82NptQYj3ZwCa2RN3g' },
-                { date: '2024-12-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSikdmvVupeTaDIaVnbm-zeAQQV-ygaI5KLN58xfP0qB00' },
-                { date: '2024-12-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSCYab_yp0aQKyAoayWmwtTAZc51ZZSVvqRpcjKxE7-BYs' },
-                { date: '2024-12-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSplhGl03ZVRpNZO1o4bDXlAZrXhzeK7rULYInh0Ck9LDQ' },
-                { date: '2024-12-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRXQEP5ioH4RK7TwcT0k8LmAWXXj8672_FYDkq4M502TU8' },
-                { date: '2024-12-13', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSaRV4AsOIdTLBR_wqf7kizAQJh7rENZILdRIRfBqbfiu4' },
-                { date: '2024-12-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRal75fHliRTpFkvUNu3PeHAXlj0VNqW2nL0rqjpO4UIz8' },
                 { date: '2024-12-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRj9ZhnbkR6Q4GBTLzfoCAXAbuSOx4MnlzRzezVV3v8EVY' },
-                { date: '2024-12-16', time: '06:59', url: 'n/a' }           
+                { date: '2024-12-16', time: '06:59', url: 'n/a' },
+                { date: '2024-12-17', time: '06:59', url: 'n/a' },
+                { date: '2024-12-18', time: '06:59', url: 'n/a' },
+                { date: '2024-12-19', time: '06:59', url: 'n/a' },
+                { date: '2024-12-20', time: '06:59', url: 'n/a' },
+                { date: '2024-12-21', time: '06:59', url: 'n/a' },
+                { date: '2024-12-22', time: '06:59', url: 'n/a' },
+                { date: '2024-12-23', time: '06:59', url: 'n/a' },
+                { date: '2024-12-24', time: '06:59', url: 'n/a' },
+                { date: '2024-12-25', time: '06:59', url: 'n/a' },
+                { date: '2024-12-26', time: '06:59', url: 'n/a' },
+                { date: '2024-12-27', time: '06:59', url: 'n/a' }          
               ];
       
 function updateIframeSrc() {
