--- a/year8-today.html
+++ b/year8-today.html
@@ -139,19 +139,19 @@
           <script>
             
               const schedule = [
-                { date: '2024-12-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRClMsNg2CUT597IDfaYEhmAW9LYxk_YFij-4Cn1ecVNpY' },
-                { date: '2024-12-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSoKhZvCZxOT4obDYyo2ATsAVYxo-gIN6KiG4YFhCphWwI' },
-                { date: '2024-12-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ2nEYI--I5TI9yJDDxHZQXAdMNUtf5Dm0L_N3XcTDE9CI' },
-                { date: '2024-12-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSOEUAN1KdaS4qUQcTv2dC5AXaRFGwlto_OSWJ_tRWcf5U' },
-                { date: '2024-12-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSfeq2sMGHpRIw5hxCJisDqAe7-Kuf0gFiFyJJgyUYfT1g' },
-                { date: '2024-12-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSUL_5FKZJcQ7z4-FpuUoFUAWjx0HBJRGfRnfr11odb6LM' },
-                { date: '2024-12-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSeuptiQq-LS6n0vvtSB0xLAT_wFNjZA4-nY766M1lIluc' },
-                { date: '2024-12-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ232q09kAcSozS2RAAcCfsASkEwZ0BtlrBYUYJkOElLks' },
-                { date: '2024-12-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQXvCY98rSvSotGOA8CTd0sAdOTGHaOz-GWXIPb-14a-xI' },
-                { date: '2024-12-13', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQxsTCGsHPkRJcWD-mD3d-qAeSuu1UJLRkgU5oTfmlBYok' },
-                { date: '2024-12-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSHWdsJOCpER4X65As5T0fJAah3DxmmS4Jsu5m_MQ1oNZs' },
                 { date: '2024-12-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQLwfqMiut-QqI-JzjtpM2PAeEze1i-73z6TeI-Ay3yBIg' },
-                { date: '2024-12-16', time: '06:59', url: 'n/a' }                                          
+                { date: '2024-12-16', time: '06:59', url: 'n/a' },
+                { date: '2024-12-17', time: '06:59', url: 'n/a' },
+                { date: '2024-12-18', time: '06:59', url: 'n/a' },
+                { date: '2024-12-19', time: '06:59', url: 'n/a' },
+                { date: '2024-12-20', time: '06:59', url: 'n/a' },
+                { date: '2024-12-21', time: '06:59', url: 'n/a' },
+                { date: '2024-12-22', time: '06:59', url: 'n/a' },
+                { date: '2024-12-23', time: '06:59', url: 'n/a' },
+                { date: '2024-12-24', time: '06:59', url: 'n/a' },
+                { date: '2024-12-25', time: '06:59', url: 'n/a' },
+                { date: '2024-12-26', time: '06:59', url: 'n/a' },
+                { date: '2024-12-27', time: '06:59', url: 'n/a' }                                          
               ];      
       
 function updateIframeSrc() {
