--- a/Year7-today.html
+++ b/Year7-today.html
@@ -145,10 +145,10 @@
                 { date: '2025-01-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQKgvyke1ilRYlsmZViD0wcAQ1nLlgKuTDafDMMHATQsU4' },
                 { date: '2025-01-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTZKq6txy6XSp5OyJtBRkKVAciPTkMXjPOWVk4C5-oYJQs' },
                 { date: '2025-01-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQlSf7NnR24Ro7OYaWLpKgsAe26MUx8Wo2_Zp5NdKIHkAA' },
-                { date: '2025-01-27', time: '06:59', url: 'n/a' },
-                { date: '2025-01-28', time: '06:59', url: 'n/a' },
-                { date: '2025-01-29', time: '06:59', url: 'n/a' },
-                { date: '2025-01-30', time: '06:59', url: 'n/a' }                        
+                { date: '2025-01-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRhA7k56uItQoHSjPrwMRlFAfPprYs9pmuXKk6kq-bawN8' },
+                { date: '2025-01-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTYoEPdD8hVQpaFfyr5TWLKARAH8fCCgIwNXa0WP9VDmVM' },
+                { date: '2025-01-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSzybpW-iKDQIHUiRxgg64RAV441Q5NFERzWJ4LyB3YYxc' },
+                { date: '2025-01-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQjf2zFbiggQ63U6wkL8gGlAS2WZmwBcK1p3Mdwba4cuAI' }                        
               ];
       
               function updateIframeSrc() {
