--- a/Year7-today.html
+++ b/Year7-today.html
@@ -138,14 +138,14 @@
       
           <script>
               // Array of objects with date, time, and corresponding URL
-              const schedule = [
-                { date: '2025-08-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQsIUHfU10IQorcclK13WQ7ARZjNYftzEhYNh9sjNOPn1M' },
-                { date: '2025-08-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQaPjDEEulwRY59EEoTfvdXAbe6LMihoVX-6DkGBcN8_Tk' },
-                { date: '2025-08-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTja5VdNwbUQ6cKro81bz9-Ac2j39Qt-jSKM1yG6UmrnAA' },
-                { date: '2025-08-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQINgg2GelkRaE-wh8NJAWVAQJaybnbaNixsJzq1_C1Z8Y' },
-                { date: '2025-08-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQzpbTr64YnSr0ojAxUmIDCAZLWvqH4BASFjBHaasCrSDY' },
-                { date: '2025-08-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSbUCiAtBgGTZB9ir7tNpcJAe_lEalDhmjE7K0ht7XdvR0' },
-                { date: '2025-09-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT--Go7W9ItSq2v2BbE6nSaAd9lriGrBYxZqsEP3OZOtaU' },
+              const schedule = 
+                { date: '2025-09-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQsIUHfU10IQorcclK13WQ7ARZjNYftzEhYNh9sjNOPn1M' },
+                { date: '2025-09-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQaPjDEEulwRY59EEoTfvdXAbe6LMihoVX-6DkGBcN8_Tk' },
+                { date: '2025-09-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTja5VdNwbUQ6cKro81bz9-Ac2j39Qt-jSKM1yG6UmrnAA' },
+                { date: '2025-09-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQINgg2GelkRaE-wh8NJAWVAQJaybnbaNixsJzq1_C1Z8Y' },
+                { date: '2025-08-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQzpbTr64YnSr0ojAxUmIDCAZLWvqH4BASFjBHaasCrSDY' },
+                { date: '2025-08-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSbUCiAtBgGTZB9ir7tNpcJAe_lEalDhmjE7K0ht7XdvR0' },
+                { date: '2025-09-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT--Go7W9ItSq2v2BbE6nSaAd9lriGrBYxZqsEP3OZOtaU' },
                 { date: '2025-09-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRECaJOvNqARZPSqr38RUGeAU8Yk9f1qW90kZs4djNZvnc' },
                 { date: '2025-09-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT-oQSCGo0US7lDq5hhb5KSARg7bfo0Ja12sin5nrSMw0U' },
                 { date: '2025-09-04', time: '06:59', url: 'https://1drvZAcrPoEyOU8L3abuD9Uir6M0' }
